// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: Literals > Boolean: true >=> Boolean 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "true",
    "type": "Bool",
  },
}
`;

exports[`Inference: Literals > Boolean: true >=> Boolean 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {},
    "term": {
      "id": 1204,
      "type": "Lit",
      "value": {
        "type": "Bool",
        "value": true,
      },
    },
    "type": {
      "id": 26,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Bool",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Literals > Row: Row >=> Type 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "Row",
    "type": "Type",
  },
}
`;

exports[`Inference: Literals > Row: Row >=> Type 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {},
    "term": {
      "id": 1204,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Row",
      },
    },
    "type": {
      "id": 26,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Literals > String: "hello" >=> String 1`] = `
{
  "displays": {
    "constraints": [],
    "term": ""hello"",
    "type": "String",
  },
}
`;

exports[`Inference: Literals > String: "hello" >=> String 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {},
    "term": {
      "id": 1204,
      "type": "Lit",
      "value": {
        "type": "String",
        "value": "hello",
      },
    },
    "type": {
      "id": 26,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Literals > Type: Type >=> Type 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "Type",
    "type": "Type",
  },
}
`;

exports[`Inference: Literals > Type: Type >=> Type 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {},
    "term": {
      "id": 1204,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "type": {
      "id": 26,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Literals > Unit: * >=> Unit 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "unit",
    "type": "Unit",
  },
}
`;

exports[`Inference: Literals > Unit: * >=> Unit 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {},
    "term": {
      "id": 1204,
      "type": "Lit",
      "value": {
        "type": "unit",
      },
    },
    "type": {
      "id": 26,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Unit",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`Inference: Literals > numbers: 1 >=> Num 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "1",
    "type": "Num",
  },
}
`;

exports[`Inference: Literals > numbers: 1 >=> Num 2`] = `
{
  "structure": {
    "constraints": [],
    "metas": {},
    "term": {
      "id": 1204,
      "type": "Lit",
      "value": {
        "type": "Num",
        "value": 1,
      },
    },
    "type": {
      "id": 26,
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Num",
      },
    },
    "typedTerms": {},
  },
}
`;
